--- a/car-client-app/src/index.html
+++ b/car-client-app/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body style="margin-top: 0px; margin-left: 0px; margin-right: 0px;">
   <app-root></app-root>
